Fix everything | All your codebase are belong to us. (C) whatthecommit.com

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -44,6 +44,13 @@ serve ./src/main/resources/public/
 open http:127.0.0.1:3000/
 ----
 
+.using docker plugin
+----
+./mvnw clean package
+./mvnw com.dkanejs.maven.plugins:docker-compose-maven-plugin:1.0.1:up -P docker
+./mvnw com.dkanejs.maven.plugins:docker-compose-maven-plugin:1.0.1:down -P docker
+----
+
 == Build documentation
 
 .build documentation
